--- a/index.html
+++ b/index.html
@@ -41,6 +41,43 @@
         </div>
         <div id="featured">
             <h1 class="h1">Featured Products</h1>
+            <div id="images">
+                <div class="image">
+                    <img src="images/image1.png" width="300px" height="200px">
+                    <h3>AIR FORCE 1 FOAMPOSITE</h3>
+                </div>
+                <div class="image">
+                    <img src="images/image2.png"width="280px" height="200px" >
+                    <h3>ADDIDAS VEGETA OVER 3000</h3>
+                </div>
+                <div class="image">
+                    <img src="images/image3.png"width="300px" height="200px" >
+                    <h3>AIR MAX 97</h3>
+                </div>
+                <div class="image">
+                    <img src="images/image4.png" width="300px" height="200px">
+                    <h3>JORDAN RETRO 11 GAMMER BLUE</h3>
+                </div>
+                <div class="image">
+                    <img src="images/image5.png"width="300px" height="200px" >
+                    <h3>JORDAN CMFT AIR MAX 10</h3>
+                </div>
+            </div>
+        </div>
+        <div>
+            <h1 class="h2">SHOP NOW</h1>
+        </div>
+        <div id="shop">
+            
+            <div id="shop-content">
+                <img src="images/shopkids.jpg" width="600px" height="600px">
+            </div>
+            <div id="shop-content">
+                <img src="images/shopall.jpg" width="600px" height="600px">
+            </div>
+            <div id="shop-content">
+                <img src="images/shopwomen.jpg" width="600px" height="600px">
+            </div>
         </div>
     </section>
 
