--- a/login.html
+++ b/login.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <section id="login-section">
-        <div>
+        <div id="content">
             <div id="heading">
                 <h3>LOGIN FORM</h3>
             </div>
@@ -20,7 +20,6 @@
                     <label>Password</label><br>
                     <input type="text" name="password" placeholder="Enter your password"><br><br>
                     <button type="submit">Login</button>
-
                 </form>
             </div>
         </div>
