--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link type="text/css" href="css/index.css" rel="stylesheet">
 </head> 
 <body>
-    <section>
+    <section id="section">
             <header>
                 <div id="head1">
                     <div id="logo">
@@ -64,19 +64,46 @@
                 </div>
             </div>
         </div>
-        <div>
-            <h1 class="h2">SHOP NOW</h1>
+        <div id="shop-now">
+            <h2 class="h2">Shop Now</h2>
         </div>
         <div id="shop">
-            
             <div id="shop-content">
-                <img src="images/shopkids.jpg" width="600px" height="600px">
+                <img src="images/shopkids.jpg" width="800px" height="600px"><br>
+                <button type="submit">Shop Retro</button>
             </div>
             <div id="shop-content">
-                <img src="images/shopall.jpg" width="600px" height="600px">
+                <img src="images/shopexc.jpg" width="800px" height="600px"><br>
+                <button type="submit">Shop Exclusive</button>
             </div>
             <div id="shop-content">
-                <img src="images/shopwomen.jpg" width="600px" height="600px">
+                <img src="images/shopall.jpg" width="1000px" height="600px"><br>
+                <button type="submit">Shop All</button>
+            </div>
+        </div>
+        <div id="featured">
+            <h2 class="h1">Coming Soon</h2>
+            <div id="images">
+                <div class="image">
+                    <img src="images/soon7.png" width="300px" height="200px">
+                    <h3>AIR JORDAN 5 RAGINGBULL</h3>
+                </div>
+                <div class="image">
+                    <img src="images/soon2.png"width="280px" height="200px" >
+                    <h3>AIR JORDAN 1 PATINA</h3>
+                </div>
+                <div class="image">
+                    <img src="images/soon3.png"width="300px" height="200px" >
+                    <h3>CHANGE THE WORLD JORDAN 5</h3>
+                </div>
+                <div class="image">
+                    <img src="images/soon4.png" width="300px" height="200px">
+                    <h3>GEORGETOWN JORDAN 3</h3>
+                </div>
+                <div class="image">
+                    <img src="images/soon5.png"width="300px" height="200px" >
+                    <h3>JORDAN CMFT AIR MAX 10</h3>
+                </div>
             </div>
         </div>
     </section>
