--- a/login.html
+++ b/login.html
@@ -14,15 +14,16 @@
                 <h3>LOGIN FORM</h3>
             </div>
             <div id="form">
-                <form>
+                <form onsubmit="event.preventDefault(); login()">
                     <label>Username</label><br>
                     <input type="text" name="username" placeholder="Enter your username"><br><br>
                     <label>Password</label><br>
-                    <input type="text" name="password" placeholder="Enter your password"><br><br>
+                    <input type="password" name="password" placeholder="Enter your password"><br><br>
                     <button type="submit">Login</button>
                 </form>
             </div>
         </div>
     </section>
+    <script src="javascript/login.js"></script>
 </body>
 </html>
