--- a/products.html
+++ b/products.html
@@ -22,9 +22,9 @@
             <div id="nav">
                 <nav>
                     <ul>
-                        <a href=""><li>HOME</li></a>
+                        <a href="home.html"><li>HOME</li></a>
                         <a href=""><li>ABOUT</li></a>
-                        <a href=""><li>SHOP NOW</li></a>
+                        <a href="products.html"><li>SHOP NOW</li></a>
                         <a href=""><li>CONTACT</li></a>
                     </ul>
                 </nav>
@@ -37,7 +37,7 @@
         </header>
     </section>
     <section>
-        <div>
+        <div id="all-prods">
             <h1>All Products</h1>
         </div>
         
