--- a/home.html
+++ b/home.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Page</title>
     <link type="text/css" href="css/home.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head> 
 <body>
     <section id="section">
@@ -17,14 +18,17 @@
                     <div id="heading">
                         <img src="images/exclusive kicks.png" height="70px">
                     </div>
+                    <div id="icon">
+                        <a href=""><i class="fa fa-shopping-cart" style="font-size:38px;color:black"></i></a>
+                    </div>
                 </div>
                <div id="head">
                 <div id="nav">
                     <nav>
                         <ul>
-                            <a href=""><li>HOME</li></a>
+                            <a href="home.html"><li>HOME</li></a>
                             <a href=""><li>ABOUT</li></a>
-                            <a href=""><li>SHOP NOW</li></a>
+                            <a href="products.html"><li>SHOP NOW</li></a>
                             <a href=""><li>CONTACT</li></a>
                         </ul>
                     </nav>
