--- a/home.html
+++ b/home.html
@@ -26,7 +26,7 @@
                     <nav>
                         <ul>
                             <a href="home.html"><li>HOME</li></a>
-                            <a href=""><li>ABOUT</li></a>
+                            <a href="about.html"><li>ABOUT</li></a>
                             <a href="products.html"><li>SHOP NOW</li></a>
                         </ul>
                     </nav>
@@ -128,7 +128,7 @@
                 </div>
                 <div class="form">
                     <h3>SEND US A MESSAGE</h3><br>
-                    <form>
+                    <form action="https://formspree.io/f/mjvpjalo">
                         <label>Name</label><br>
                         <input type="text" id="name" placeholder="Enter name" name="Name"></br></br>
                         <label>Surname</label><br>
