--- a/products.html
+++ b/products.html
@@ -7,6 +7,7 @@
     <title>Products</title>
     <link rel="stylesheet" href="css/products.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link type="text/css" href="css/footer.css" rel="stylesheet">
 </head>
 <body>
     <section id="">
@@ -27,7 +28,7 @@
                 <nav>
                     <ul>
                         <a href="home.html"><li>HOME</li></a>
-                        <a href=""><li>ABOUT</li></a>
+                        <a href="about.html"><li>ABOUT</li></a>
                         <a href="products.html"><li>SHOP NOW</li></a>
                     </ul>
                 </nav>
@@ -51,7 +52,7 @@
                 <span class="close">&times;</span>
                 <div class="total-price">
                     <div class="total-results">
-                        <h1>Total Price: R </h1>
+                        <h1>Total Price </h1>
                         <h1 class="price">0</h1>
                         <button class="checkout" onclick="checkOut();">Checkout</button>
                     </div> 
@@ -59,7 +60,45 @@
                 <div id="contents"></div>
             </div>
         </div>
-    <!-- <script src="javascript/products.js"></script> -->
+        <section id="footer">
+            <footer>
+                <div class="contact">
+                    <div class="in-touch">
+                        <div class="heading">
+                            <h3>GET IN TOUCH</h3>
+                            </div>
+                            <div class="icons">
+                                <a href="#" class="fa fa-facebook"></a>
+                                <label>exc.kicks</label><br><br>
+                                <a href="#" class="fa fa-twitter"></a>
+                                <label>@exclusive.kicks</label><br><br>
+                                <a href="#" class="fa fa-google"></a>
+                                <label>exclusivekicks@gmail.com</label><br><br>
+                                <a href="#" class="fa fa-linkedin"></a>
+                                <label>@exclusivekicks.linkedin</label><br><br>
+                            </div>
+                    </div>
+                    <div class="logo">
+                        <img src="images/logo.png" width="300px" height="300px">
+                    </div>
+                    <div class="form">
+                        <h3>SEND US A MESSAGE</h3><br>
+                        <form>
+                            <label>Name</label><br>
+                            <input type="text" id="name" placeholder="Enter name" name="Name"></br></br>
+                            <label>Surname</label><br>
+                            <input type="text" id="surname" placeholder="Enter surname"name="Surname" ></br></br>
+                            <label>Email</label><br>
+                            <input type="text" id="email" placeholder="Enter email"name="Email"></br></br>
+                            <label>Message</label></br>
+                            <textarea cols="40" rows="10" name="message" placeholder="Type your message"name="Message" ></textarea></br></br>
+                            <button id="button" type="submit">Send Message</button>
+                        </form>
+                    </div>
+                    
+                </div>
+            </footer>
+        </section>
     <script src="javascript/cart.js"></script>
 </body>
 </html>
