--- a/about.html
+++ b/about.html
@@ -49,6 +49,10 @@
             ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse 
             cillum dolore eu fugiat nulla pariatur. Excepteur sint 
             occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            The purpose of lorem ipsum is to create a natural looking block of text (sentence, paragraph, page, etc.) that doesn't distract from the layout. A practice not without controversy, laying out pages with meaningless filler text can be very useful when the focus is meant to be on design, not content.
+
+            The passage experienced a surge in popularity during the 1960s when Letraset used it on their dry-transfer sheets, and again during the 90s as desktop publishers bundled the text with their software. Today it's seen all around the web; on templates, websites, and stock designs. 
+            Use our generator to get your own, or read on for the authoritative history of 
         </div>
     </div>
 </section>
@@ -75,7 +79,8 @@
             </div>
             <div class="form">
                 <h3>SEND US A MESSAGE</h3><br>
-                <form>
+                <form action="https://formspree.io/f/mjvpjalo"
+                method="POST">
                     <label>Name</label><br>
                     <input type="text" id="name" placeholder="Enter name" name="Name"></br></br>
                     <label>Surname</label><br>
