--- a/home.html
+++ b/home.html
@@ -128,7 +128,8 @@
                 </div>
                 <div class="form">
                     <h3>SEND US A MESSAGE</h3><br>
-                    <form action="https://formspree.io/f/mjvpjalo">
+                    <form action="https://formspree.io/f/mjvpjalo"
+                    method="POST">
                         <label>Name</label><br>
                         <input type="text" id="name" placeholder="Enter name" name="Name"></br></br>
                         <label>Surname</label><br>
